fix overflow

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -9,5 +9,5 @@
   background: #141527;
   height: 100vh;
   width: 100%;
-  /* overflow: scroll; */
+  overflow: scroll;
 }
